--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ attrs==22.2.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
+coverage==7.2.1
 exceptiongroup==1.1.1
 fastapi==0.94.1
 greenlet==2.0.2
@@ -16,6 +17,7 @@ packaging==23.0
 pluggy==1.0.0
 pydantic==1.10.6
 pytest==7.2.2
+pytest-cov==4.0.0
 python-dotenv==1.0.0
 PyYAML==6.0
 requests==2.28.2
